# mirea-configuration-management

./: .gitignore  .gitmodules  README.md
.github/workflows/: report-generator.yml
dz/dz1/: .gitignore  dz1.docx  dz1.md  pyproject.toml  script.vsh  title.docx
dz/dz1/vshell/: README.md  __main__.py  pyproject.toml  vshell.py
dz/dz1/vshell/vshell/: __main__.py  vshell.py
dz/dz2/: dz2.docx  dz2.md  test.dot  title.docx
dz/dz3/: dz3.md  grammar.txt  title.docx
dz/dz3/cfglang/: pyproject.toml
dz/dz3/cfglang/cfglang/: __main__.py  converter.py  groupstest  lang_lexer.py  lang_parser.py  test
dz/dz3/cfglang/tests/: test_converter.py
dz/dz4/: .gitignore  Minimakefile  dz4.md  test.mk  test.rst  title.docx  topologicalsorting.py
dz/dz4/minimake/: pyproject.toml
dz/dz4/minimake/minimake/: __main__.py  graph.py  hashes_manager.py  make_file_parser.py  make_lexer.py  make_parser.py  makefile_lexer.py  minimake.py
dz/dz4/minimake/minimake/dataclasses/: config.py  makefile.py  rule.py  variable.py
dz/dz4/test/: a.out  (+5 more)
dz/dz5/: dz5.md  test.dot  title.docx
dz/dz5/gitviz/: pyproject.toml
dz/dz5/gitviz/gitviz/: __main__.py  blob.py  commit.py  git.py  gitviz.py  tree.py
dz/dz6/: README.md  cpio_archive.py  dz6.md  title.docx
dz/dz6/sandboxer/: pyproject.toml
dz/dz6/sandboxer/sandboxer/: __main__.py  copy_iso.py  sandboxer.py
dz/dz6/sandboxer/sandboxer/data/tcz/: glibc_add_lib.tcz  glibc_base_dev.tcz  gmp_dev.tcz  isl.tcz  isl_dev.tcz  libzstd.tcz  linux_headers.tcz  make.tcz  mpc.tcz  mpc_dev.tcz  mpfr.tcz  mpfr_dev.tcz  zstd.tcz  zstd_dev.tcz
dz/dz6/sandboxer/sandboxer/libcpio/: __init__.py  cpio_archive.py  cpio_entry.py
pracs/prac1/: hello.c  prac1.docx  prac1.md  reg.sh  task10.sh  task4.sh  task7.sh  task8.sh  task9.sh  title.docx
pracs/prac2/: express.dot  prac2.docx  prac2.md  task5.mzn  task6.mzn  title.docx
pracs/prac3/: prac3.docx  prac3.md  someprog.py  task1.jsonnet  title.docx
tasks/: pract1.md
(+29 files in other folders)
