[tool.poetry]
name = "vshell"
version = "0.1.0"
description = ""
authors = ["Roman Beloklokov <roma.beloklockov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vshell = 'vshell.__main__:main'
