[tool.poetry]
name = "cfglang"
version = "0.1.0"
description = ""
authors = ["witelokk <death.thunder@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sly = {git = "https://github.com/dabeaz/sly.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
